fixed bugs on IOs

--- a/00_projects/javascript_capstone/css/details.css
+++ b/00_projects/javascript_capstone/css/details.css
@@ -67,6 +67,7 @@
 }
 
 .title__lang-tag {
+    font-family: "Arial", "Helvetica", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -225,7 +226,7 @@
 .status__season-details {
     font-size: 1.4rem;
     font-weight: 500;
-    width: 10rem;
+    width: 12.5rem;
     height: 3rem;
     border: 0.1rem solid var(--color-border);
     border-radius: 0.6rem;
@@ -381,4 +382,8 @@ blockquote::after {
 .hidden-trailer {
     opacity: 0;
     pointer-events: none;
+}
+
+#arrow {
+    font-family: "Arial", "Helvetica", sans-serif;
 }
